--- a/components/organisms/Header.module.scss
+++ b/components/organisms/Header.module.scss
@@ -329,7 +329,7 @@
       position: absolute;
       bottom: -40px;
       left: 0;
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: black;
       color: #fff;
 
       .linesContainer {
