--- a/components/organisms/ProductsList/ProductCard/ProductCard.module.scss
+++ b/components/organisms/ProductsList/ProductCard/ProductCard.module.scss
@@ -4,16 +4,16 @@
   width: 300px;
   height: 400px;
   padding: 10px 20px 20px 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  display: grid;
+  grid-template-rows: 170px 60px 60px 25px 50px;
+  justify-items: center;
   align-items: center;
   position: relative;
   border: 1px solid black;
   text-align: center;
 
   img {
-    height: 200px;
+    height: 170px;
   }
 
   .ribbon {
@@ -109,6 +109,7 @@
 @include mediaSmallest {
   .container {
     width: 250px;
+    grid-template-rows: 170px 60px 60px 25px 50px;
 
     h2 {
       font-size: 1.2rem;
